replacing commons-lang with commons-lang3