@@ -8,6 +8,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -69,7 +70,7 @@ public class NativeLibraryUtils {
      * @throws IOException If temporary file creation or read/write operation fails
      */
     public static void loadLibrary(String path, String libraryName) throws IOException {
-        path = URLDecoder.decode(path, "UTF-8");
+        path = URLDecoder.decode(path, StandardCharsets.UTF_8);
         String mappedLibName = System.mapLibraryName(libraryName);
         if (path.startsWith("/")) {
             path = path.substring(1);
@@ -78,25 +79,26 @@ public class NativeLibraryUtils {
         if (path.contains(".jar")) {
             int contentsSeparatorIndex = path.indexOf("!");
             String jarPath = path.substring(0, contentsSeparatorIndex);
-            JarFile jarFile = new JarFile(jarPath);
-            Enumeration<JarEntry> entries = jarFile.entries();
-            JarEntry jarEntry = null;
-            while (entries.hasMoreElements()) {
-                JarEntry currentEntry = entries.nextElement();
-                if (org.apache.commons.lang.StringUtils.containsIgnoreCase(currentEntry.getName(), libraryName)) {
-                    jarEntry = currentEntry;
-                    break;
+            try (JarFile jarFile = new JarFile(jarPath)) {
+                Enumeration<JarEntry> entries = jarFile.entries();
+                JarEntry jarEntry = null;
+                while (entries.hasMoreElements()) {
+                    JarEntry currentEntry = entries.nextElement();
+                    if (org.apache.commons.lang3.StringUtils.containsIgnoreCase(currentEntry.getName(), libraryName)) {
+                        jarEntry = currentEntry;
+                        break;
+                    }
                 }
-            }
-            if (jarEntry == null) {
-                throw new IOException(String.format("Library %s could not be found in the jar file %s", libraryName, path));
-            }
-            try (InputStream in = jarFile.getInputStream(jarEntry)) {
-                Path tmpPath = Paths.get(System.getProperty("java.io.tmpdir"), "lib", getOSFamily(), mappedLibName);
-                try (OutputStream out = FileUtils.openOutputStream(tmpPath.toFile())) {
-                    IOUtils.copy(in, out);
+                if (jarEntry == null) {
+                    throw new IOException(String.format("Library %s could not be found in the jar file %s", libraryName, path));
                 }
-                path = tmpPath.toAbsolutePath().toString();
+                try (InputStream in = jarFile.getInputStream(jarEntry)) {
+                    Path tmpPath = Paths.get(System.getProperty("java.io.tmpdir"), "lib", getOSFamily(), mappedLibName);
+                    try (OutputStream out = FileUtils.openOutputStream(tmpPath.toFile())) {
+                        IOUtils.copy(in, out);
+                    }
+                    path = tmpPath.toAbsolutePath().toString();
+                }
             }
         } else {
             if (!Files.exists(Paths.get(path, mappedLibName))) {
